--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,5 +4,8 @@
 @import './common';
 @import './carusel';
 @import './publication';
+@import './entry_page';
+@import './entry_page';
+@import './contact_page';
 
 
